# bot_2_0

./: .env.example  .gitignore  main.py  message.json  pyproject.toml  redis_client.py  session_636218845.session-journal
bot/: __init__.py  config.py  run.py
bot/constants/: constans.py
bot/decorators/: admin_required.py
bot/handlers/: __init__.py  authorized.py  handlers_admin.py  handlers_callback_query.py  handlers_datatbase.py  handlers_message.py  handlers_start.py  handlers_user.py
bot/keyboard/: __init__.py  keyboard.py  keyboard_admin.py  keyboard_db.py
bot/services/: authorized.py  for_error.py  for_handlers.py  utils.py
database/: __init__.py  config.py  models.py  run.py
database/services/: crud_channel.py  crud_user.py  services.py
parser/: channels.py  client.py  config.py  decorators.py  handlers.py  monitoring.py  parser.py  run.py  utils.py
settings/: config.py  logging_config.json
tests/bot/: admin_required_test.py  handlers_admin_test.py  handlers_callback_query_test.py
utils/: __init__.py  logger.py
