[tool.poetry]
name = "bot-2-0"
version = "0.1.0"
description = ""
authors = ["iko4akov <iko4akov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.39.0"
dotenv = "^0.9.9"
aiologger = "^0.7.0"
aiogram = "^3.18.0"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
redis = "^5.2.1"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
